<resources>
    <string name="app_name">Notes</string>
    <string name="dayOfWeek_Label">День недели: </string>
    <string name="button_save_note">ДОБАВИТЬ ЗАМЕТКУ</string>
    <string name="hint_title">ЗАГОЛОВОК ЗАМЕТКИ </string>
    <string name="hint_description">ОПИСАНИЕ ЗАМЕТКИ</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>

    </string-array>
</resources>