<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/editTextTitle"
        android:layout_marginRight="8dp" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:layout_marginRight="8dp" />

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/spinnerDaysOfWeek"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        android:entries="@array/days_of_week"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/radioGroupPriority"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDaysOfWeek"
        android:orientation="horizontal">

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButton1"
        android:text="@string/priority_1"
        android:background="@android:color/holo_red_light"
        android:layout_weight="1"/>

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButton2"
        android:text="@string/priority_2"
        android:background="@android:color/holo_orange_light"
        android:layout_weight="1"/>

    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/radioButton3"
        android:text="@string/priority_3"
        android:background="@android:color/holo_green_light"
        android:layout_weight="1"
        android:checked="true"/>



</RadioGroup>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/buttonSaveNote"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority"
        android:text="@string/button_save_note"
        android:background="@android:color/holo_purple"
        android:onClick="onClickSaveNote"
        android:textColor="@android:color/background_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>